--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -1,6 +1,25 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<nav class="navbar navbar-expand-lg bg-light ">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">{{nama}}</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <button><a href="{% url 'wishlist:logout' %}">Logout</a></button>
+            </li>
+          </ul>
+        </div>
+    </div>
+</nav>
+
 <h5>Nama: </h5>
 <p>{{nama}}</p>
 
@@ -21,7 +40,5 @@
 </table>
 
 <h5>Sesi terakhir login: {{ last_login }}</h5>
-
-<button><a href="{% url 'wishlist:logout' %}">Logout</a></button>
 
 {% endblock content %}
