--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -20,8 +20,8 @@
     </div>
 </nav>
 
-<h5>Nama: </h5>
-<p>{{nama}}</p>
+<h5>&ensp;Nama: </h5>
+<p>&emsp;{{nama}}</p>
 <div class="container">
     <table class="table-wishlist">
         <thead>
@@ -46,6 +46,6 @@
 </div>
 
 
-<h5>Sesi terakhir login: {{ last_login }}</h5>
+<h5>&ensp;Sesi terakhir login: {{ last_login }}</h5>
 
 {% endblock content %}
