--- a/templates/base.html
+++ b/templates/base.html
@@ -9,52 +9,56 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   {% block meta %}
   {% endblock meta %}
+
   <style>
-  .container {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
+    body {
+      font-family: Maven Pro;
+    }
 
-.table-wishlist table {
-	width: 800px;
-	border-collapse: collapse;
-	overflow: hidden;
-	box-shadow: 0 0 20px rgba(0,0,0,0.1);
-}
+    .container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    }
 
-.table-wishlist th,
-td {
-	padding: 15px;
-	background-color: rgba(255,255,255,0.2);
-	color: black;
-}
+    .table-wishlist table {
+      width: 800px;
+      border-collapse: collapse;
+      overflow: hidden;
+      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+    }
 
-.table-wishlist th {
-	text-align: left;
-}
+    .table-wishlist th,
+    td {
+      padding: 15px;
+      background-color: rgba(255,255,255,0.2);
+      color: black;
+    }
 
-.table-wishlist thead {
-		background-color: #55608f;
-}
+    .table-wishlist th {
+      text-align: left;
+    }
 
+    .table-wishlist thead {
+        background-color: #55608f;
+    }
 
-.table-wishlist tr:hover {
-			background-color: rgba(255,255,255,0.3);
-	}
-	.table-wishlist td:hover {
-		position: relative;
-				content: "";
-				position: absolute;
-				left: 0;
-				right: 0;
-				top: -9999px;
-				bottom: -9999px;
-				background-color: rgba(255,255,255,0.2);
-				z-index: -1;
-	}
-		
+    .table-wishlist tr:hover {
+          background-color: rgba(255,255,255,0.3);
+      }
+      .table-wishlist td:hover {
+        position: relative;
+            content: "";
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: -9999px;
+            bottom: -9999px;
+            background-color: rgba(255,255,255,0.2);
+            z-index: -1;
+      }
+      
   </style>
 </head>
 
