--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
   <style>
     body {
-      font-family: Maven Pro;
+      font-family: 'Courier New', Courier, monospace;
     }
 
     .container {
@@ -20,6 +20,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    margin-top: 5em;
+    align-items: center;
     }
 
     .table-wishlist table {
