--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -3,7 +3,7 @@
 {% block content %}
 <nav class="navbar navbar-expand-lg bg-light ">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">{{nama}}</a>
+        <a class="navbar-brand" href="#">Welcome, {{nama}}!</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -19,11 +19,11 @@
         </div>
     </div>
 </nav>
-
-<h5>&ensp;Nama: </h5>
+<br>
+<h5>&ensp;Name: </h5>
 <p>&emsp;{{nama}}</p>
 <div class="container">
-    <table class="table-wishlist">
+    <table class="table-wishlist" >
         <thead>
             <tr>
                 <th>Nama Barang</th>
